      upstream-signing-key.pgp is missing.  (Closes: #735084)
    + Update the GitHub example.  Based on a patch by YABUKI Yukiharu.
      (Closes: #728182)
    + Support escaped characters in the Files-Excluded patterns.  Thanks to
      Csillag Tamas and Russ Albery for the patch.  (Closes: #733111)
    + Move keyring location for signature verification under debian/upstream/.

 -- Jakub Wilk <jwilk@debian.org>  Fri, 27 Dec 2013 18:39:11 +0100

devscripts (2.13.9) unstable; urgency=low

  [ Martin Pitt ]
  * autopkgtest: Add "allow-stderr" restriction to avoid failing tests because
    of the HTTP server log on stderr.

  [ James McCoy ]
  * uscan:
    + Repack the tarball and verify it is a compressed archive without
      allowing arbitrary code execution.  Fixes CVE-2013-6888.
    + Use find's -exec to call rm directly instead of piping to xargs.
      (Closes: #732006, CVE-2013-7085)
    + Follow tar's recommended security practices
      - Use --keep-old-files --no-overwrite-dir
      - Ensure parent directory of directory used for repacking archive isn't
        accessible to other users.
    + Fix handling of 'dirname' exclusions, so 'dirname/*' isn't required.

  [ Salvatore Bonaccorso ]
  * uscan: Fix unitialized value warning when copyright is not in
    copyright-format 1.0.  (Closes: #732807)

 -- James McCoy <jamessan@debian.org>  Mon, 23 Dec 2013 15:28:45 -0500

devscripts (2.13.8) unstable; urgency=medium

  [ James McCoy ]
  * uscan: Fix arbitrary command execution when using USCAN_EXCLUSION.
    (Closes: #731849)

  [ Adam D. Barratt ]
  * Honour USCAN_EXCLUSION.  (Closes: #731885)

 -- James McCoy <jamessan@debian.org>  Tue, 10 Dec 2013 20:26:42 -0500

devscripts (2.13.7) unstable; urgency=medium

  * Fix imports of Devscripts::Compression.  (Closes: #731847)

 -- James McCoy <jamessan@debian.org>  Tue, 10 Dec 2013 07:49:54 -0500

devscripts (2.13.6) unstable; urgency=medium

  [ James McCoy ]
  * chdist: Fix a [A-z] regex typo.