@@ -229,7 +229,7 @@ And now, in mostly alphabetical order, the scripts:
   version based on the new update.  Whilst uscan could be used to release
   the updated version automatically, it is probably better not to without
   testing it first.  Uscan can also verify detached OpenPGP signatures if 
-  upstream's signing key is known. [gpgv, liblwp-protocol-https-perl,
+  upstream's signing key is known. [gpgv, gnupg, liblwp-protocol-https-perl,
   libwww-perl, unzip, lzma, xz-utils]
 
 - uupdate: Update the package with an archive or patches from
